# s6-fresnel-firmware-mos

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  TEST.cbp  build.sh  mos.yml  mos_esp32.yml
fs/: crontab.json
src/: calibration.hpp  consts.fresnel.h  consts.h  consts.powr2.h  devfunctions.h  globals.h  main.cpp  s6calib-entrypoint.hpp  s6fw-entrypoint.hpp  version.h
src/config/: settings.h  settings.hpp
src/core/: devfunctions.fresnel.h  devfunctions.h  devfunctions.powr2.h
src/factories/: sensorsFactories.h  uartFactories.h
src/hardware/: PowerSensor.h  S6DailyKwh.h  S6ExtPowerSensor.h  S6FPowerSensor.h  S6MCP39F511DailyKwh.hpp  S6MCP39F511PowerSensor.h  S6MCP39F511PowerSensor.hpp  S6MCP39F511VoltageSensor.hpp  SONOFFDailyKwh.h  SONOFFPowerSensor.h
src/hardware/devices/: xsns_hlw8012.h
src/hardware/devices/CSE7766/: CSE7766BufferDecoder.hpp
src/hardware/devices/MCP39F511/: AddressPointerCmd.hpp  AutoCalibrateFrequencyCmd.hpp  AutoCalibrateGainCmd.hpp  AutoCalibrateReactiveGain.hpp  BulkEraseEEPROMCmd.hpp  MCP39F511Command.hpp  MCP39F511Consts.h  MCP39F511DataTypes.hpp  MCP39F511Utils.hpp  PageReadEEPROMCmd.hpp  PageWriteEEPROMCmd.hpp  RegisterReadCmd.hpp  RegisterWriteCmd.hpp  SaveRegistersToFlashCmd.hpp
src/hardware/devices/MCP39F511/commands/: ICommandFrame.hpp  ReadMeteringValues.hpp  ResetKWhAccumulator.hpp  StartKWhAccumulator.hpp
src/hardware/devices/MCP39F511/uart/: IMCP39F511UARTProto.h  MCP39F511UARTProto.hpp
src/hardware/gpio/: InputDevice.h  OutputDevice.h  S6Relay.hpp
src/hardware/io/: ESP32ADCReader.h  ESP8266ADCReader.h  IUART.h  UARTInterface.hpp
src/hardware/net/: ifaces.hpp
src/hardware/sensors/: MCP39F511Consts.h  S6MCP39F511AutoCalibrate.hpp  S6MCP39F511Current.hpp  S6MCP39F511DailyKwh.hpp  S6MCP39F511LineFreq.hpp  S6MCP39F511PowerFactorSensor.hpp  S6MCP39F511PowerSensor.hpp  S6MCP39F511ResetDailyKwh.hpp  S6MCP39F511StartDailyKwh.hpp  S6MCP39F511U16Register.hpp  S6MCP39F511U32Register.hpp  S6MCP39F511U64Register.hpp  S6MCP39F511VoltageSensor.hpp  SONOFFDailyKwh.h  SONOFFPowerSensor.h  SensorValue.hpp
src/hardware/serials/: SPIManager.h
src/interfaces/: IADCReader.h  IOutputDevice.h  ISPI.h  IScalarSensor.h  ISensorCommand.h  ISensorCommand.hpp  IUART.h
src/libs/: frozen.c  frozen.h
src/network/: messages.h  mqtt.h  topics.h
src/scheduler/: IScheduledTask.hpp  Schedule.hpp  Scheduler.hpp
src/setup/: cron_sys.hpp  devices_sys.fresnel.hpp  devices_sys.hpp  devices_sys.powr2.hpp  mqtt_sys.hpp  sensors_sys.hpp
src/utils/: datetime.h  dateutils.h
test/: CMakeLists.txt  commons.cpp  s6test  test_base.cpp
test/hardware/devices/CSE7766/: CSE7766BufferDecoder_spec.cpp
test/hardware/devices/MCP39F511/: commands_spec.cpp  consts_spec.cpp  datatypes_spec.cpp  frame_cmds_spec.cpp
test/hardware/sensors/: sensorValue_spec.cpp
test/network/: messages_spec.cpp  topics_spec.cpp
test/scheduler/: schedule_spec.cpp  scheduler_spec.cpp
